<resources>
    <string name="app_name">Notes</string>
    <string name="notes">Заметки</string>
    <string name="search">Поиск</string>
    <string name="pinned">Закрепленные</string>
    <string name="all">Все</string>
    <string name="Title">Заголовок</string>
    <string name="save">Сохранить</string>
    <string name="undo">Отменить</string>
    <string name="redo">Вернуть</string>
    <string name="bold">Жирный</string>
    <string name="italic">Курсив</string>
    <string name="text_color">Цвет текста</string>
    <string name="text_bg">Фон текста</string>
</resources>