<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNoteActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title"
            android:fontFamily="@font/notosans_semibold"
            android:textSize="20sp"
            android:hint="@string/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <HorizontalScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/save"
                    android:text="@string/save"
                    android:fontFamily="@font/notosans_bold"
                    android:padding="5dp"
                    android:background="@drawable/search_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/undo"
                    android:text="@string/undo"
                    android:fontFamily="@font/notosans_bold"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/search_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/redo"
                    android:text="@string/redo"
                    android:fontFamily="@font/notosans_bold"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/search_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bold"
                    android:text="@string/bold"
                    android:fontFamily="@font/notosans_bold"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/search_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/italic"
                    android:text="@string/italic"
                    android:fontFamily="@font/notosans_bold"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/search_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_color"
                    android:text="@string/text_color"
                    android:fontFamily="@font/notosans_bold"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/search_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bg_color"
                    android:text="@string/text_bg"
                    android:fontFamily="@font/notosans_bold"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/search_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>

        <jp.wasabeef.richeditor.RichEditor
            android:id="@+id/editor"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>