<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akrobat_black"
            android:text="@string/notes"
            android:layout_weight="1"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/create_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akrobat_black"
            android:text="+"
            android:paddingHorizontal="15dp"
            android:gravity="center"
            android:background="@drawable/search_bg"
            android:textSize="35sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_bg"
        android:fontFamily="@font/notosans_semibold"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:singleLine="true"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pinned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/akrobat_black"
        android:text="@string/pinned"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pinned_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bg"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/akrobat_black"
        android:text="@string/all"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bg"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>